...
              context,
            ).pop((trustPermanently: trustedSignerNotifier.value));
          },
          style: FilledButton.styleFrom(
            padding: const EdgeInsets.symmetric(horizontal: 20, vertical: 12),
          ),
          child: const Text('Trust and install app'),
        ),
      ],
    );
  }
}

