...
        val informationUrl = Catalog.relay
            .replaceFirst("wss://", "https://")
            .replaceFirst("ws://", "http://")
        OkHttpClient().newCall(
            Request.Builder()
                .url(informationUrl)
                .header("Accept", "application/nostr+json")
                .build(),
        ).execute().use { response ->
            response.takeIf { it.isSuccessful }
                ?.body
                ?.string()
                ?.let(::JSONObject)
...
