...
import 'package:hooks_riverpod/hooks_riverpod.dart';
import 'package:models/models.dart';
import 'package:zapstore/services/package_manager/package_manager.dart';
import 'package:zapstore/theme.dart';
import 'package:zapstore/utils/extensions.dart';

/// "Update All" button row.
class UpdateAllRow extends ConsumerWidget {
  const UpdateAllRow({super.key, required this.allUpdates});

  final List<App> allUpdates;

  @override
...
